testing dynamic param names

--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -1272,7 +1272,7 @@ paths:
               properties:
                 speaker_map:
                     type: object
-                    properties:
+                    patternProperties:
                       '^[A-Z]$':
                         type: string
                         description: >
