testing dynamic param names

--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -1279,7 +1279,7 @@ paths:
                   patternProperties:
                     '^[A-Z]$':
                       type: string
-                      patter: '^[A-Z]$'
+                      pattern: '^[A-Z]$'
             example:
               {
                 "speaker_map": {
