--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -36,60 +36,39 @@ components:
       type: apiKey
       in: query
       name: apikey
-  requestBodies:
-    jsonBody:
-      description: X
-      required: false
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              transcript:
-                type: array
-                description: >
-                  The format for a JSON transcript is an array of strings that each include a **speaker label** 
-                  followed by a **colon**, then a **space** and the **utterance** (what that speaker actually said). 
-                  You can add an optional timestamp (formatted as in the example below) for every array item.
-                  `source` must be set to `generic`.
-                  ```
-                  {
-                    "transcript": [
-                      "[00:01:23 --> 00:01:25] Joe: This is an example of a generic transcript.",
-                      "[00:01:26 --> 00:01:27] Jill: Oh wow!"
-                    ]
-                  }
-                  ```
-                items:
-                  type: string
-          example:
-            {
-              "transcript": [
-                "[00:01:23 --> 00:01:25] Joe: This is an example of a generic transcript.",
-                "[00:01:26 --> 00:01:27] Jill: Oh wow!"
-              ]
-            }
-    formBody:
-      description: X
-      required: false
-      content:
-        multipart/form-data:
-          schema:
-            oneOf:
-              - $ref: "#/components/schemas/TranscriptFile"
-              - $ref: "#/components/schemas/AudioFile"
-              - $ref: "#/components/schemas/VTTFile"
-    textBody:
-      description: X
-      required: false
-      content:
-          text/plain:
-            schema:
-              type: string
-              description: >
-                If `source` is set to `vtt`, you can use raw vtt text in the request body. Make sure your vtt is 
-                formatted correctly (you can use [this validator](https://quuz.org/webvtt/)).
   schemas:
+    jsonBody:
+      type: object
+        properties:
+          transcript:
+            type: array
+            description: >
+              The format for a JSON transcript is an array of strings that each include a **speaker label** 
+              followed by a **colon**, then a **space** and the **utterance** (what that speaker actually said). 
+              You can add an optional timestamp (formatted as in the example below) for every array item.
+              `source` must be set to `generic`.
+              ```
+              {
+                "transcript": [
+                  "[00:01:23 --> 00:01:25] Joe: This is an example of a generic transcript.",
+                  "[00:01:26 --> 00:01:27] Jill: Oh wow!"
+                ]
+              }
+              ```
+            items:
+              type: string
+        example:
+          {
+            "transcript": [
+              "[00:01:23 --> 00:01:25] Joe: This is an example of a generic transcript.",
+              "[00:01:26 --> 00:01:27] Jill: Oh wow!"
+            ]
+          }
+    textBody:
+      type: string
+      description: >
+        If `source` is set to `vtt`, you can use raw vtt text in the request body. Make sure your vtt is 
+        formatted correctly (you can use [this validator](https://quuz.org/webvtt/)).
     BaseSummary:
       type: object
       description: Base Summary
@@ -730,10 +709,16 @@ paths:
             default: false
           example: false
       requestBody:
-        oneOf:
-          - $ref: "#/components/requestBodies/jsonBody"
-          - $ref: "#/components/requestBodies/formBody"
-          - $ref: "#/components/requestBodies/textBody"
+        application/json:
+          $ref: "#/components/schemas/jsonBody"
+        multipart/form-data:
+          schema:
+            oneOf:
+              - $ref: "#/components/schemas/TranscriptFile"
+              - $ref: "#/components/schemas/AudioFile"
+              - $ref: "#/components/schemas/VTTFile"
+        text/plain:
+          $ref: "#/components/schemas/textBody"
       responses:
         '201':
           description: Successfully created a job
