--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -711,7 +711,8 @@ paths:
       requestBody:
         content:
           application/json:
-            $ref: "#/components/schemas/jsonBody"
+            schema:
+              $ref: "#/components/schemas/jsonBody"
           multipart/form-data:
             schema:
               oneOf:
@@ -719,7 +720,8 @@ paths:
                 - $ref: "#/components/schemas/AudioFile"
                 - $ref: "#/components/schemas/VTTFile"
           text/plain:
-            $ref: "#/components/schemas/textBody"
+            schema:
+              $ref: "#/components/schemas/textBody"
       responses:
         '201':
           description: Successfully created a job
