--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -507,7 +507,7 @@ paths:
                   monthly_request_limit:
                     type: integer
                     description: >
-                      Your monthly request limit - if you'd like to raise this, please contact info@wordcab.com
+                      Your monthly request limit - if you'd like to raise this, please contact info@wordcab.com.
                   request_count:
                     type: integer
                     description: The number of successful requests during the specified date range.
@@ -563,8 +563,7 @@ paths:
         - Summarize
       summary: Start Job
       description: >
-        Initiate a summary job with an audio file, text transcript, or JSON object. Note that a trailing slash
-        is required in **/summarize**.
+        Initiate a summary job with an audio file, text transcript, or JSON object.
       parameters:
         - name: X-Wordcab-Metadata-SomeKey
           in: header
@@ -713,12 +712,6 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/jsonBody"
-          multipart/form-data:
-            schema:
-              oneOf:
-                - $ref: "#/components/schemas/TranscriptFile"
-                - $ref: "#/components/schemas/AudioFile"
-                - $ref: "#/components/schemas/VTTFile"
           text/plain:
             schema:
               $ref: "#/components/schemas/textBody"
