--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -712,6 +712,12 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/jsonBody"
+          multipart/form-data:
+            schema:
+              oneOf:
+                - $ref: "#/components/schemas/TranscriptFile"
+                - $ref: "#/components/schemas/AudioFile"
+                - $ref: "#/components/schemas/VTTFile"
           text/plain:
             schema:
               $ref: "#/components/schemas/textBody"
