--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -42,11 +42,8 @@ components:
       properties:
         transcript:
           type: array
-          description: >
-            The format for a JSON transcript is an array of strings that each include a **speaker label** 
-            followed by a **colon**, then a **space** and the **utterance** (what that speaker actually said). 
-            You can add an optional timestamp (formatted as in the example below) for every array item.
-            `source` must be set to `generic`.
+          description: |
+            The format for a JSON transcript is an array of strings that each include a **speaker label**  followed by a **colon**, then a **space** and the **utterance** (what that speaker actually said). You can add an optional timestamp (formatted as in the example below) for every array item. `source` must be set to `generic`.
             ```
             {
               "transcript": [
