--- a/wordcab_api_reference.yaml
+++ b/wordcab_api_reference.yaml
@@ -710,12 +710,12 @@ paths:
                 - $ref: "#/components/schemas/TranscriptFile"
                 - $ref: "#/components/schemas/AudioFile"
                 - $ref: "#/components/schemas/VTTFile"
-          application/json:
-            schema:
-              $ref: "#/components/schemas/jsonBody"
-          text/plain:
-            schema:
-              $ref: "#/components/schemas/textBody"
+#          application/json:
+#            schema:
+#              $ref: "#/components/schemas/jsonBody"
+#          text/plain:
+#            schema:
+#              $ref: "#/components/schemas/textBody"
       responses:
         '201':
           description: Successfully created a job
